<resources>
    <string name="app_name">DailyBrainTeaser</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="button">Button</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="phone_no">Phone No</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="msg">Msg</string>
    <string name="puzzles">Puzzles</string>
    <string name="riddles">Riddles</string>
    <string name="science">Science</string>
    <string name="quotations">Quotations</string>
</resources>